templates/networkpolicies/allow-from-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-default
  namespace: "{env}-{name}"
spec:
  namespaceSelector:
    matchLabels:
      name: default
